<resources>
    <string name="app_name">App</string>
    <string name="gambar">gambarkubus</string>
    <string name="title_activity_hkerucut">HkerucutActivity</string>
    <string name="sisi">Sisi</string>
    <string name="hitung">Hitung</string>
    <string name="hasil">Hasil :</string>
    <string name="lebar">Lebar</string>
    <string name="tinggi">Tinggi</string>
    <string name="hasil1">Hasil :</string>
    <string name="hasil2">Hasil</string>
    <string name="panjang">Panjang</string>
    <string name="klebar">lebar</string>
    <string name="ktinggi">tinggi</string>
    <string name="hasil3">Hasil :</string>
    <string name="jari_jari">Jari-jari</string>
    <string name="tinggik">Tinggi</string>
    <string name="hasil4">Hasil</string>
    <string name="gambar2">gambar2</string>
    <string name="gambar3">gambar3</string>
    <string name="gambar4">gambar4</string>
    <string name="judul">Aplikasi Bangun Ruang</string>
    <string name="nama">By Muhammad Rodhian Syabri</string>
    <string name="gambard">gambarddd</string>
    <string name="hai">Hai.. Silahkan Pilih Bangun Ruang dibawah ini</string>
    <string name="gambarbawah">gambarbawah</string>
    <string name="kerucutt">kerucutt</string>
    <string name="balokk">balokk</string>
    <string name="volumekubusju">Volume Kubus</string>
    <string name="gambarrvk">gambarrvk</string>
    <string name="selimutkubus">Luas Permukaan Kubus</string>
    <string name="volumekerucut">Volume Kerucut</string>
    <string name="kerucutv">kerucutv</string>
    <string name="selimutkerucut">Luas Permukaan Kerucut</string>
    <string name="selimutbalok">Luas Permukaan Balok</string>
    <string name="gambarrbalok">TODO</string>
    <string name="volumebalok">Volume Balok</string>
    <string name="gambarvb">gambarvb</string>
    <string name="gambarkrs">gambarkrs</string>
    <string name="kubuss">kubuss</string>
    <string name="gambarkubusss">gambarkubusss</string>
    <string name="Gbg1">Gbg1</string>
    <string name="Gbg2">Gbg2</string>
    <string name="Gbg3">Gbg3</string>
</resources>
